update to modal that shows the case study and gives the user the option to download

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "flowbite-react": "^0.11.8",
     "lucide-react": "^0.501.0",
-    "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0"
   },
